force-app/main/default/objects/Visit_Pre_Registration__c/Visit_Pre_Registration__c.object-meta.xml
<CustomObject>
    <label>Visit Pre Registration</label>
    <nameField>
        <displayFormat>VPR-{000000}</displayFormat>
        <label>Visit Pre Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Pre Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>