force-app/main/default/objects/Visit_Pre_Registration__c/fields/Configuration_required__c.field-meta.xml
<CustomField>
    <fullName>Configuration_required__c</fullName>
    <label>Configuration required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Configuration_Required</valueSetName>
    </valueSet>
</CustomField>