force-app/main/default/objects/Visit_Pre_Registration__c/fields/CP_Lead__c.field-meta.xml
<CustomField>
    <fullName>CP_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Lead</label>
    <referenceTo>CP_Lead__c</referenceTo>
    <relationshipLabel>Visit Pre Registrations</relationshipLabel>
    <relationshipName>Visit_Pre_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>