force-app/main/default/objects/Visit_Pre_Registration__c/fields/CP_Name__c.field-meta.xml
<CustomField>
    <fullName>CP_Name__c</fullName>
    <formula>Lead__r.Channel_Partner__r.Name</formula>
    <label>CP Name</label>
    <type>Text</type>
</CustomField>