force-app/main/default/objects/Visit_Pre_Registration__c/fields/CP_Project__c.field-meta.xml
<CustomField>
    <fullName>CP_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CP Project</label>
    <referenceTo>CP_Project__c</referenceTo>
    <relationshipLabel>Visit Pre-Registrations</relationshipLabel>
    <relationshipName>Visit_Pre_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>