force-app/main/default/objects/Visit_Pre_Registration__c/fields/Extend_Validity_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Extend_Validity_In_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Extend Validity (In Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>