force-app/main/default/objects/Visit_Pre_Registration__c/fields/Is_Extended_Validity__c.field-meta.xml
<CustomField>
    <fullName>Is_Extended_Validity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Extended Validity</label>
    <type>Checkbox</type>
</CustomField>