force-app/main/default/objects/Visit_Pre_Registration__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Visit Pre-Registrations</relationshipLabel>
    <relationshipName>Visit_Pre_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>