force-app/main/default/objects/Visit_Pre_Registration__c/fields/Ola_Pickup_Facility__c.field-meta.xml
<CustomField>
    <fullName>Ola_Pickup_Facility__c</fullName>
    <label>Ola Pickup Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>