force-app/main/default/objects/Visit_Pre_Registration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Visit Pre-Registrations</relationshipLabel>
    <relationshipName>Visit_Pre_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>