force-app/main/default/objects/Visit_Pre_Registration__c/fields/OTP_Number__c.field-meta.xml
<CustomField>
    <fullName>OTP_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>OTP Number</label>
    <type>AutoNumber</type>
</CustomField>