force-app/main/default/objects/Visit_Pre_Registration__c/fields/Pre_Registration_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Pre_Registration_Expiry__c</fullName>
    <label>Pre Registration Expiry</label>
    <type>DateTime</type>
</CustomField>