force-app/main/default/objects/Visit_Pre_Registration__c/fields/Pre_registration_OTP__c.field-meta.xml
<CustomField>
    <fullName>Pre_registration_OTP__c</fullName>
    <label>Pre registration OTP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>