force-app/main/default/objects/Visit_Pre_Registration__c/fields/Pre_Registration_Validity_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>Pre_Registration_Validity_In_Hours__c</fullName>
    <defaultValue>48</defaultValue>
    <label>Pre Registration Validity (In Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>