force-app/main/default/objects/Visit_Pre_Registration__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Visit Pre Registrations</relationshipLabel>
    <relationshipName>Visit_Pre_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>