force-app/main/default/objects/Visit_Pre_Registration__c/fields/Sourcing_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Sourcing_Manager_Name__c</fullName>
    <formula>Lead__r.Owner:User.FirstName + &apos; &apos;+ Lead__r.Owner:User.LastName</formula>
    <label>Sourcing Manager Name</label>
    <type>Text</type>
</CustomField>