force-app/main/default/objects/Visit_Pre_Registration__c/fields/SPOC__c.field-meta.xml
<CustomField>
    <fullName>SPOC__c</fullName>
    <label>SPOC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>