force-app/main/default/objects/Visit_Pre_Registration__c/fields/Visit_Pre_Registration_Code__c.field-meta.xml
<CustomField>
    <fullName>Visit_Pre_Registration_Code__c</fullName>
    <label>Visit Pre Registration Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>