force-app/main/default/objects/Visit_Pre_Registration__c/validationRules/Check_Extend_Validity.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Extend_Validity</fullName>
    <active>false</active>
    <errorConditionFormula>!ISNEW() &amp;&amp; ( Extend_Validity_In_Hours__c  &lt; 48 || Extend_Validity_In_Hours__c  &gt; 48)</errorConditionFormula>
    <errorMessage>The Extend Validity value must be exactly 48 hours</errorMessage>
</ValidationRule>