force-app/main/default/objects/Visit_Pre_Registration__c/validationRules/Not_update_existing_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_update_existing_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(PRIORVALUE( Status__c )) =  TEXT(Status__c), ISPICKVAL(Status__c, &apos;cancelled&apos;))</errorConditionFormula>
    <errorMessage>Pre-Registration is already cancelled</errorMessage>
</ValidationRule>