force-app/main/default/objects/Visit_Pre_Registration__c/validationRules/Visit_Date_Less_than_two_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Visit_Date_Less_than_two_days</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Visit_Date__c &gt; (NOW() + 2), ISNEW())</errorConditionFormula>
    <errorDisplayField>Visit_Date__c</errorDisplayField>
    <errorMessage>Visit Date Should be Less than 2 days</errorMessage>
</ValidationRule>