force-app/main/default/objects/Visit_Pre_Registration__c/listViews/Copy_of_Visit_Pre_Registration_Expired.listView-meta.xml
<ListView>
    <fullName>Copy_of_Visit_Pre_Registration_Expired</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Visit Pre-Registration Expired</label>
</ListView>