force-app/main/default/objects/Visit_Pre_Registration__c/listViews/My_Pre_Registrations_CP.listView-meta.xml
<ListView>
    <fullName>My_Pre_Registrations_CP</fullName>
    <columns>NAME</columns>
    <columns>Pre_registration_OTP__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Visit_Date__c</columns>
    <columns>Ola_Pickup_Facility__c</columns>
    <columns>SPOC__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>My Pre-Registrations</label>
</ListView>