force-app/main/default/objects/Visit_Pre_Registration__c/listViews/Visit_Pre_Registration_Completed.listView-meta.xml
<ListView>
    <fullName>Visit_Pre_Registration_Completed</fullName>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Project__c</columns>
    <columns>Mobile_Number__c</columns>
    <columns>Site_Visit_Date__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Visit Pre-Registration Completed</label>
</ListView>